# TEMPLATE

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  CONVENTIONS.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  mypy.ini  plan.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
docs/: DEPLOYMENT.md  README.md  USAGE.md
infra/compose/: docker-compose.yml
scripts/: docker-entrypoint.sh  migrate.sh
src/: __init__.py
src/app/: __init__.py  cache.py  celery_app.py  factory.py  logging_config.py
src/app/config/: __init__.py  settings.py
src/app/db/: __init__.py  engine.py  session.py
src/app/routes/: health.py  root.py
src/app/templates/: base.html
tests/: test_smoke.py
